--- a/css/style.css
+++ b/css/style.css
@@ -1196,7 +1196,7 @@ input[type="text"] {
   text-decoration: none;
 }
 
-/*.mfp-with-zoom .mfp-container,
+.mfp-with-zoom .mfp-container,
 .mfp-with-zoom.mfp-bg {
   opacity: 0;
   -webkit-backface-visibility: hidden;
@@ -1206,8 +1206,8 @@ input[type="text"] {
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
-*/
-/*.mfp-with-zoom.mfp-ready .mfp-container {
+
+.mfp-with-zoom.mfp-ready .mfp-container {
   opacity: 1;
 }
 
@@ -1215,10 +1215,10 @@ input[type="text"] {
   opacity: 0.8;
 }
 
-/*.mfp-with-zoom.mfp-removing .mfp-container,
+.mfp-with-zoom.mfp-removing .mfp-container,
 .mfp-with-zoom.mfp-removing.mfp-bg {
   opacity: 0;
-}*/
+}
 
 .nopaddingbottom {
   padding-bottom: 0 !important;
